--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <body>
     <div class="header">
       <img src="./dropdown.png" width="32px" height="32px" alt="dropdown" />
+      <span>Çözüm ve Hizmetler</span>
+      <span>Ürünler</span>
+      <span>Teknolojiler</span>
+      <span>İnsan Kaynakları</span>
+      <span>Kurumsal</span>
       <div class="headerButton">İletişim</div>
     </div>
     <div class="title">Bilgi Teknolojilerinde 23 Yıllık Tecrübe</div>
